--- a/templates/project/_delete_form.html.twig
+++ b/templates/project/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('project_delete', {'id': project.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('project_delete', {'id': project.id}) }}" onsubmit="return confirm('Êtes-vous certain de vouloir supprimer ce projet ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ project.id) }}">
-    <button class="btn btn-danger">{{ button_label|default('delete') }}</button>
+    <button class="btn btn-danger">{{ button_label|default('Supprimer ') }}</button>
 </form>
