--- a/templates/project/_delete_form.html.twig
+++ b/templates/project/_delete_form.html.twig
@@ -1,5 +1,5 @@
-<form method="post" action="{{ path('project_delete', {'id': project.id}) }}" onsubmit="return confirm('Êtes-vous certain de vouloir supprimer ce projet ?');">
+<form method="post" action="{{ path('project_delete', {'id': project.id}) }}"  style="display:inline-block" onsubmit="return confirm('Êtes-vous certain de vouloir supprimer ce projet ?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ project.id) }}">
-    <button class="btn btn-danger">{{ button_label|default('Supprimer ') }}</button>
+    <button class="btn btn-sm PurpleHaze">{{ button_label|default(' ') }} <i class="fa fa-trash" aria-hidden="true" style:></i></button>
 </form>
